--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -36,6 +36,7 @@ body {
     -moz-transition: all 0.75s ease;
     -ms-transition: all 0.75s ease;
     -o-transition: all 0.75s ease;
+    overflow-x: hidden;
 }
 
 button {
