--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -11,6 +11,7 @@ $font_neutral: "Neutral Face", sans-serif;
 $secondary_color_2: var(--secondary_color_2);
 $fifth_color_2: var(--fifth_color_2);
 
-$bp_laptop: 992px;
+// $bp_laptop: 992px;
+$bp_laptop: 1180px;
 $bp_tablet: 768px;
 $bp_phone: 600px;
