--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -1,4 +1,5 @@
 @import "../../style/variables";
+@import "../../style/mixins.scss";
 
 .contact {
   display: flex;
@@ -11,9 +12,7 @@
     text-align: center;
     width: 57.5rem;
     max-width: 100%;
-    font-size: 1.8rem;
-    font-family: $font_poppins;
-    font-weight: 300;
+    @include textMain;
     color: $third_color;
     margin-bottom: 3rem;
   }
@@ -31,19 +30,13 @@
       display: flex;
       width: 100%;
       border-bottom: 0.1rem solid rgba(216, 216, 216, 0.5);
-      font-size: 1.8rem;
-
-      font-family: $font_poppins;
-      font-weight: 300;
+      @include textMain;
       color: $fifth_color;
       line-height: 2.5;
 
       input {
         margin-left: 2rem;
-        font-size: 1.8rem;
-
-        font-family: $font_poppins;
-        font-weight: 300;
+        @include textMain;
         line-height: 2.5;
         color: $fifth_color;
         background: none;
@@ -62,10 +55,8 @@
     }
 
     textarea {
-      font-size: 1.8rem;
       width: 100%;
-      font-family: $font_poppins;
-      font-weight: 300;
+      @include textMain;
       color: $fifth_color;
       // color: white;
       background: none;
@@ -84,26 +75,46 @@
       resize: none;
     }
   }
-
-  a {
-    text-align: center;
-    font-size: 1.8rem;
-    font-family: $font_poppins;
-    font-weight: 300;
-    color: $third_color;
-    margin-bottom: 1rem;
-    text-decoration: none;
-  }
-
   h3 {
     &:last-child {
       text-align: center;
-      font-size: 1.8rem;
-      font-family: $font_poppins;
-      font-weight: 300;
+      @include textMain;
       color: $third_color;
       margin-bottom: 1rem;
     }
+  }
+}
+
+.contact-info {
+  display: flex;
+  width: fit-content;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+
+  a {
+    @include textMain;
+    color: $third_color;
+    text-decoration: none;
+    width: 215px;
+
+    &:first-of-type {
+      text-align: right;
+    }
+    &:last-of-type {
+      text-align: left;
+    }
+  }
+
+  br {
+    display: none;
+  }
+
+  span {
+    width: 0.1rem;
+    height: 1.8rem;
+    background-color: $third_color;
+    opacity: 0.7;
   }
 }
 
@@ -143,6 +154,25 @@
           font-size: 1.4rem;
         }
       }
+    }
+  }
+
+  .contact-info {
+    gap: 2rem;
+    flex-direction: row;
+    margin-bottom: 2rem;
+
+    a {
+      width: 150px;
+      text-align: center !important;
+    }
+
+    br {
+      display: block;
+    }
+
+    span {
+      height: 3rem;
     }
   }
 }
