--- a/src/components/Projects/projects.scss
+++ b/src/components/Projects/projects.scss
@@ -1,4 +1,5 @@
 @import "../../style/variables";
+@import "../../style/mixins.scss";
 
 .projects {
   display: flex;
@@ -9,6 +10,7 @@
   background-color: $secondary_color;
 
   &_p {
+    @include textStyle(1.8rem, $font_poppins, normal);
     font-family: $font_poppins;
     font-size: 1.8rem;
     color: $third_color;
