--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -72,7 +72,7 @@
     &_img {
       width: 50%;
       height: 100%;
-      background-image: url("../../img/about.png");
+      background-image: url("../../img/about.webp");
       background-position: center;
       background-size: cover;
       filter: grayscale(100%);
