--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -59,7 +59,7 @@ button {
   -ms-border-radius: 3.5rem;
   -o-border-radius: 3.5rem;
 
-  &_dark {
+  &__dark {
     color: $fifth_color;
     background-color: $secondary_color;
   }
